--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 /* Basic Style */
 body {
-    background-color: #f8f8f8;
-    color: #333;
-    font-family: "Lato", sans-serif;
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: "Lato", sans-serif;
 }
+
 .header {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
 }
+
 .header__img {
-    width: 100%;
+  width: 100%;
 }
+
 .header__link {
-    font-family: fantasy, cursive;
+  font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
@@ -22,142 +25,158 @@ body {
   .header { 
     text-align: center;
   }
-  
+
 }
 .main {
-    display: block;
-    width: 500px;
-    margin: 0 auto 0;
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
 }
+
 .add-task__input,
 .todo__input,
 .completed__input {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1;
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
 }
+
 .add-task__wrapper,
 .todo__wrapper {
-    display: flex;
+  display: flex;
 }
+
 ul {
-    margin: 0;
-    padding: 0px;
+  margin: 0;
+  padding: 0px;
 }
-li, h3 {
-    list-style: none;
+
+li, 
+h3 {
+  list-style: none;
 }
+
 input,button{
-    outline: none;
+  outline: none;
 }
+
 button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: "Lato", sans-serif;
-    cursor: pointer;
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: "Lato", sans-serif;
+  cursor: pointer;
 }
+
 button:hover {
-    color: #3a3a3a;
+  color: #3a3a3a;
 }
+
 /* Heading */
 h3,
 .add-task__label {
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
 }
+
 input[type="text"] {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #ddd;
-    background: #fff;
-    border-radius: 6px;
-    font-family: "Lato", sans-serif;
-    color: #888;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
+  font-family: "Lato", sans-serif;
+  color: #888;
 }
+
 input[type="text"]:focus {
-    color: #333;
+  color: #333;
 }
 
 /* New Task */
 .add-task__label {
-    display: block;
-    margin: 0 0 20px;
+  display: block;
+  margin: 0 0 20px;
 }
 .add-task__input {
-    width: 318px;
+  width: 318px;
 }
 
 /* Task list */
 .todo__item,
 .completed__item {
-    overflow: hidden;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
+  overflow: hidden;
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
 li > * {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .todo__checkbox,
 .completed__checkbox {
-    margin: 0 10px;
+  margin: 0 10px;
 }
+
 .todo__label,
 .completed__label {
-    padding-left: 10px;
-    box-sizing: border-box;
-    font-size: 18px;
-    width: 226px;
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
 }
+
 .todo__input,
 .completed__input {
-    width: 226px;
+  width: 226px;
 }
+
 .todo__delete-icon,
 .completed__delete-icon {
-    height: 2em;
-    transform: rotateZ(45deg);
-    transition: transform 200ms ease-in;
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
 }
+
 .todo__delete:hover .todo__delete-icon,
 .completed__delete:hover .completed__delete-icon {
-    transform: rotateZ(0);
+  transform: rotateZ(0);
 }
 
 /* Completed */
 .completed__list label {
-    text-decoration: line-through;
-    color: #888;
+  text-decoration: line-through;
+  color: #888;
 }
 
 /* Edit Task */
 .todo__item input[type=text],
 .completed__item input[type=text] {
-    display: none;
+  display: none;
 }
 
 .todo__item_edit input[type=text],
 .completed__item_edit input[type=text] {
-    display: inline-block;
-    width: 224px;
+  display: inline-block;
+  width: 224px;
 }
 
 .todo__item_edit label,
 .completed__item_edit label {
-    display: none;
+  display: none;
 }
